<resources>
    <string name="app_name">CodewarsChallenge</string>

    <!-- SPLASH SCREEN -->
    <string name="splash_app_name">Codewars\nChallenge</string>
    <string name="splash_error_message">"Somethig went wrong, try again later"</string>

    <!-- SEARCH SCREEN -->
    <string name="search_toolbar_title">Members</string>
    <string name="search_search_view_hint">search user by name</string>
    <string name="search_screen_title">Search</string>
    <string name="search_screen_recent_searches">Recent searches</string>
    <string name="search_screen_menu_order_by_rank">order by rank</string>
    <string name="search_screen_menu_order_by_search">order by search</string>
    <string name="search_screen_search_for_new_users">Looks like you do not have recent searches, search for users on codewars</string>
    <string name="search_screen_user_not_found_message">User not found, please try again!</string>
    <string name="search_screen_user_already_on_recent_searches">User info is already displayed on recent searches</string>
    <string name="search_screen_item_user_name_title">Name</string>
    <string name="search_screen_item_user_rank_title">Leaderboard Position</string>
    <string name="search_screen_item_user_best_language_title">Best Language</string>
    <string name="search_screen_item_user_language_score_title">Best Language Score</string>
    <string name="search_screen_item_show_user_challenges">show challenges</string>
    <string name="search_screen_item_unknown">unknown</string>

    <!-- CHALLENGES SCREEN -->
    <string name="challenges_toolbar_title">Challenges</string>
    <string name="challenges_menu_complete">complete</string>
    <string name="challenges_menu_authored">authored</string>
    <string name="challenges_item_name">Challenge name:</string>
    <string name="challenges_item_description">Description:</string>
    <string name="challenges_item_completed_at">Completed at:</string>
    <string name="challenges_complete_title">Complete Challenges</string>
    <string name="challenges_authored_title">Authored Challenges</string>
    <string name="challenges_error_message">Unable to fetch challenges</string>
    <string name="challenges_complete_error_message">Unable to fetch complete challenges</string>
    <string name="challenges_authored_error_message">Unable to fetch authored challenges</string>
    <string name="challenges_view_challenges_details">view details</string>

    <!-- COMPLETE CHALLENGES DETAILS SCREEN -->
    <string name="complete_challenges_details_toolbar_title">Complete challenge details</string>
    <string name="complete_challenges_details_id_title">Id</string>
    <string name="complete_challenges_details_name_title">Name</string>
    <string name="complete_challenges_details_slug_title">Slug</string>
    <string name="complete_challenges_details_completed_languages">Completed Languages</string>
    <string name="complete_challenges_details_error_message">Unable to fetch complete challenge details</string>

    <!-- AUTHORED CHALLENGES DETAILS SCREEN -->
    <string name="authored_challenges_details_toolbar_title">Authored challenge details</string>
    <string name="authored_challenges_details_description_title">Description</string>
    <string name="authored_challenges_details_rank_title">Rank</string>
    <string name="authored_challenges_details_rank_name_title">Rank name</string>
    <string name="authored_challenges_details_tags_title">Tags</string>
    <string name="authored_challenges_details_languages_title">Languages</string>
    <string name="authored_challenges_details_error_message">Unable to fetch authored challenge details</string>

</resources>