<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_505050">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_challenges_screen_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_search_screen_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_search_screen_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:text="@string/search_screen_title"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_challenges_screen_id"/>

    <SearchView
        android:id="@+id/sv_search_screen_search_member"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:queryHint="@string/search_search_view_hint"
        android:paddingHorizontal="0dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_search_screen_title"
        app:layout_constraintStart_toStartOf="@+id/tv_search_screen_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_screen_title" />

    <TextView
        android:id="@+id/tv_search_screen_recent_searches"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/search_screen_recent_searches"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_search_screen_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_search_screen_title"
        app:layout_constraintTop_toBottomOf="@id/sv_search_screen_search_member"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_screen_recent_searches"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_search_screen_title"
        app:layout_constraintStart_toStartOf="@id/tv_search_screen_title"
        app:layout_constraintTop_toBottomOf="@id/tv_search_screen_recent_searches"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_searched_users"
        tools:itemCount="5"/>

    <ProgressBar
        android:id="@+id/pb_search_screen"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="381dp"
        app:layout_constraintTop_toBottomOf="@id/appbar_challenges_screen_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tv_search_screen_search_for_new_users"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/search_screen_search_for_new_users"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/appbar_challenges_screen_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>