<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardCornerRadius="4dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_searched_users_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/search_screen_item_user_name_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_searched_users_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_name_title"
                tools:text="@tools:sample/full_names"/>

            <TextView
                android:id="@+id/tv_searched_users_rank_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_screen_item_user_rank_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_name"/>

            <TextView
                android:id="@+id/tv_searched_users_rank"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_rank_title"
                tools:text="123"/>

            <TextView
                android:id="@+id/tv_searched_users_best_language_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_screen_item_user_best_language_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_rank"/>

            <TextView
                android:id="@+id/tv_searched_users_best_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_best_language_title"
                tools:text="Kotlin"/>

            <TextView
                android:id="@+id/tv_searched_users_language_score_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/search_screen_item_user_language_score_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_best_language"/>

            <TextView
                android:id="@+id/tv_searched_users_language_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_language_score_title"
                tools:text="2345"/>

            <Button
                android:id="@+id/btn_searched_users_show_challenges"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/search_screen_item_show_user_challenges"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="@+id/tv_searched_users_name_title"
                app:layout_constraintEnd_toEndOf="@+id/tv_searched_users_name_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_searched_users_language_score"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>