<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_challenges_details_screen_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_challenges_details_screen_id"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_challenges_details_screen_id">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_challenges_details_id_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="16dp"
                android:text="@string/complete_challenges_details_id_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_challenges_details_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_id_title"
                tools:text="@tools:sample/full_names"/>

            <TextView
                android:id="@+id/tv_challenges_details_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/complete_challenges_details_name_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_id" />

            <TextView
                android:id="@+id/tv_challenges_details_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_name_title"
                tools:text="@tools:sample/full_names"/>


            <TextView
                android:id="@+id/tv_challenges_details_slug_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/complete_challenges_details_slug_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_name" />

            <TextView
                android:id="@+id/tv_challenges_details_slug"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_slug_title"
                tools:text="@tools:sample/full_names"/>

            <TextView
                android:id="@+id/tv_challenges_details_completed_at_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/authored_challenges_details_rank_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_slug" />

            <TextView
                android:id="@+id/tv_challenges_details_completed_at"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_completed_at_title"
                tools:text="@tools:sample/full_names"/>

            <TextView
                android:id="@+id/tv_challenges_details_rank_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/authored_challenges_details_rank_name_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_completed_at" />

            <TextView
                android:id="@+id/tv_challenges_details_rank_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_rank_name_title"
                tools:text="@tools:sample/lorem"/>

            <TextView
                android:id="@+id/tv_challenges_details_tags_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/authored_challenges_details_tags_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_rank_name" />

            <TextView
                android:id="@+id/tv_challenges_details_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_tags_title"
                tools:text="@tools:sample/lorem"/>

            <TextView
                android:id="@+id/tv_challenges_details_languages_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/authored_challenges_details_languages_title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_tags" />

            <TextView
                android:id="@+id/tv_challenges_details_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginBottom="16dp"
                app:layout_constraintEnd_toEndOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintStart_toStartOf="@+id/tv_challenges_details_id_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_challenges_details_languages_title"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="@tools:sample/lorem"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>